shorter fix for scrollbar problem - added style-mixins further up the road. generated slate to test - looks fine

--- a/less/jquery.ui.jqgrid.less
+++ b/less/jquery.ui.jqgrid.less
@@ -37,6 +37,12 @@
   border-right : 0 none !important;
   
 }
+/* content table */
+div.ui-jqgrid-view table.ui-jqgrid-btable
+{
+  .table-striped;
+  .table-hover;
+}
 .ui-jqgrid .ui-jqgrid-hbox {float: left; padding-right: 20px;}
 .ui-jqgrid .ui-jqgrid-htable {table-layout:fixed;margin:0;}
 .ui-jqgrid .ui-jqgrid-htable th {height:22px;padding: 0 2px 0 2px;}
@@ -263,38 +269,13 @@ tr.ui-search-toolbar select {margin: 1px 0 0 0}
 .ui-jqgrid .ui-search-table { padding: 0px 0px; border: 0px none; height:20px; width:100%;}
 .ui-jqgrid .ui-search-table .ui-search-oper { width:20px; }
 
-/* Fixes to help jQgrid against bootstrap's box-sizing */
 
-table.ui-jqgrid-btable,
-table.ui-jqgrid-htable,
-table.ui-pg-table {
-  border-collapse: collapse;
-  box-sizing: content-box!important;
-}
-table.ui-pg-table {
-  border-collapse: separate;
-  box-sizing: content-box!important;
-}
+/* Fixes to help jQgrid against bootstrap's tablestyles */
 
-div.ui-jqgrid-view table.ui-jqgrid-btable
-{
-  .table-striped;
-  .table-hover;
-  border-style:none;
-  border-top-style:none;
-  border-collapse:separate;
-}
-div.ui-jqgrid-view table.ui-jqgrid-btable td
-{
-  border-left-style:none
-}
+div.ui-jqgrid-view table.ui-jqgrid-btable,
 div.ui-jqgrid-view table.ui-jqgrid-htable
 {
-  border-style:none;
-  border-top-style:none;
   border-collapse:separate;
 }
-div.ui-jqgrid-view table.ui-jqgrid-btable th
-{
-  border-left-style:none
-}
+
+
